@@ -37,7 +37,14 @@ makeTreeSummarizedExperimentFromPhyloseq <- function(obj) {
         stop("'obj' must be a 'phyloseq' object")
     }
     #
-    assays <- SimpleList(counts = obj@otu_table@.Data)
+    # Get the assay
+    counts <- obj@otu_table@.Data
+    # Check the orientation, and transpose if necessary
+    if( !obj@otu_table@taxa_are_rows ){
+        counts <- t(counts)
+    }
+    # Create a list of assays
+    assays <- SimpleList(counts = counts)
     
     if(!is.null(obj@tax_table@.Data)){
         rowData <- DataFrame(data.frame(obj@tax_table@.Data))
